--- a/package.json
+++ b/package.json
@@ -1,5 +1,25 @@
 {
   "dependencies": {
-    "dotenv": "^16.0.1"
-  }
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1"
+  },
+  "name": "rest-rant",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/CameronJWalker/project-rest-rant1.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/CameronJWalker/project-rest-rant1/issues"
+  },
+  "homepage": "https://github.com/CameronJWalker/project-rest-rant1#readme",
+  "description": ""
 }
